Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/failover/FailOver02.out
FailOver02.java:10:1: compiler.err.does.not.override.abstract: Test, close(), java.lang.AutoCloseable
FailOver02.java:12:9: compiler.err.cant.resolve.location.args: kindname.method, close, , , (compiler.misc.location: kindname.class, Test, null)
2 errors
